--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
         <div class="timeline-item">
             <div class="timeline-content">
                 <h2>Nossa Trilha Sonora</h2>
-                <p>A música que embala os nossos momentos e que diz tanto sobre nós. Basta dar o play para sentir a nossa sintonia.</p>
-                 <!-- !!! TROCAR O EMBED DO SPOTIFY !!! -->
                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7JpFcYfSopIHvqLEgqttDU?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                <!-- <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/14V16vpsaBQXd6is6e0pLS?utm_source=generator&theme=0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
+                
             </div>
         </div>
 
@@ -80,12 +78,12 @@
                 <p>Alguns dos infinitos motivos que me fazem amar você cada dia mais. Clique em cada coração para descobrir.</p>
                  <div class="grid-motivos">
                     <!-- Use data-text para a mensagem. Troque os textos! -->
-                    <div class="motivo" data-text="Amo quando me olha com esses seus olhos sedutores que me prendem de uma forma que não consigo explicar."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
-                    <div class="motivo" data-text="Admiro sua inteligência e a forma única como você enxerga o mundo."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
-                    <div class="motivo" data-text="Amo a paz que sinto quando estamos juntinhos (melhor agora que é todo dia). Com você, me sinto seguro até para ser a concinha menor."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
-                    <div class="motivo" data-text="Você faz eu me sentir amado, sinto que posso contar com você para tudo."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
-                    <div class="motivo" data-text="Você ser a mãe dos meus filhos é o maior presnte que Deus poderia me dar."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
-                    <div class="motivo" data-text="Sou o ser humano mais feliz do universo ao seu lado, você me faz ser feliz de verdade."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></div>
+                    <button class="motivo" data-text="Amo quando me olha com esses seus olhos sedutores que me prendem de uma forma que não consigo explicar."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
+                    <button class="motivo" data-text="Admiro sua inteligência e a forma única como você enxerga o mundo."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
+                    <button class="motivo" data-text="Amo a paz que sinto quando estamos juntinhos (melhor agora que é todo dia). Com você, me sinto seguro até para ser a concinha menor."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
+                    <button class="motivo" data-text="Você faz eu me sentir amado, sinto que posso contar com você para tudo."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
+                    <button class="motivo" data-text="Você ser a mãe dos meus filhos é o maior presnte que Deus poderia me dar."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
+                    <button class="motivo" data-text="Sou o ser humano mais feliz do universo ao seu lado, você me faz ser feliz de verdade."><svg viewBox="0 0 24 24"><path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"></path></svg></button>
                 </div>
             </div>
         </div>
@@ -98,24 +96,26 @@
                 <img src="assets/images/12.png" alt="Imagem simbólica de sonhos e futuro">
             </div>
         </div>
+
+        <!-- Item 6: Contador de Tempo Juntos -->
+        <div class="timeline-item">
+            <div class="timeline-content">
+                <h2>Nosso Tempo Juntos</h2>
+                <p>Cada segundo ao seu lado é um presente.</p>
+                <div class="contador-tempo">
+                    <div><span id="dias">00</span> Dias</div>
+                    <div><span id="horas">00</span> Horas</div>
+                    <div><span id="minutos">00</span> Minutos</div>
+                    <div><span id="segundos">00</span> Segundos</div>
+                </div>
+                <p><small>Contando desde [Data do Início do Namoro - substitua ou configure no script.js]</small></p>
+            </div>
+        </div>
+
+
     </main>
 
-    <!-- Item 6: Contador de Tempo Juntos -->
-    <div class="timeline-item">
-        <div class="timeline-content">
-            <h2>Nosso Tempo Juntos</h2>
-            <p>Cada segundo ao seu lado é um presente. Veja quanto tempo já dedicamos a construir nossa linda história:</p>
-            <div class="contador-tempo">
-                <div><span id="dias">00</span> Dias</div>
-                <div><span id="horas">00</span> Horas</div>
-                <div><span id="minutos">00</span> Minutos</div>
-                <div><span id="segundos">00</span> Segundos</div>
-            </div>
-            <p><small>Contando desde [Data do Início do Namoro - substitua ou configure no script.js]</small></p>
-        </div>
-    </div>
-
-
+    
     <!-- Seção de Finalização -->
     <section id="finalizacao">
         <h2>E a história continua...</h2>
