change: text adaptation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="timeline-item">
             <div class="timeline-content">
                 <h2>O Início de Tudo</h2>
-                <p>Onde a nossa história começou. O primeiro olhar, a primeira conversa, o momento em que soube que a minha vida ia mudar para sempre.</p>
+                <p>Sempre me encantava quando te via através dos vidros de onde era a Purific e desde a primeira batida de olho fiquei encantado com sua beleza. Mal imaginava eu que seria o ser mais sortudo do mundo e dar a sorte te dar match com você no Tinder, ter tido a honra de te conhecer e estar formando uma familia com você. Saiba que eu não poderia estar mais feliz de ter vivido tudo o que vivi com você até agora e espero viver muito mais.</p>
                 <div class="timeline-images">
                     <img src="assets/images/1.jpg" alt="Foto do início do namoro"> 
                     <img src="assets/images/13.jpg" alt="Foto do início do namoro"> 
@@ -37,7 +37,7 @@
         <div class="timeline-item">
             <div class="timeline-content">
                 <h2>Momentos Mágicos</h2>
-                <p>Pequenos instantes que se tornaram as nossas memórias mais preciosas. Viagens, risadas e aventuras que guardo no coração.</p>
+                <p>A melhor parte de ter você comigo é que todo momento com você é mágico, me marca e me faz cada vez mais amar você.</p>
                 <!-- Swiper -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
